--- a/app/src/main/res/layout/fragment_check_soil.xml
+++ b/app/src/main/res/layout/fragment_check_soil.xml
@@ -70,10 +70,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:visibility="invisible" />
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
-                android:id="@+id/soilcontainerFragment">
+                android:id="@+id/soilcontainerFragment"
+                android:visibility="invisible"
+                >
 
             </FrameLayout>
         </LinearLayout>
