--- a/app/src/main/res/layout/fragment_diseases.xml
+++ b/app/src/main/res/layout/fragment_diseases.xml
@@ -60,13 +60,13 @@
             android:id="@+id/uploadbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:enabled="true"
             android:text="Upload"
             android:textColor="@color/blue"
-            app:layout_constraintTop_toBottomOf="@+id/selectbtn"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="30dp"
-            android:enabled="false"/>
+            app:layout_constraintTop_toBottomOf="@+id/selectbtn" />
 
         <ProgressBar
             android:id="@+id/progressBar"
